--- a/styles.css
+++ b/styles.css
@@ -104,13 +104,13 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: var(--almost-dark);
+    color: var(--medium);
     border-radius: 50%;
     width: 3em;
     height: 3em;
     font-weight: bold;
     font-size: 1.2em;
-    background-color: var(--almost-dark);
-    color: var(--medium);
 }
 
 .rating-label:hover {
@@ -121,6 +121,7 @@ h1 {
 
 .active {
     background-color: var(--highlight);
+    color: var(--white);
 }
 
 .submit {
